# AOS

./: .gitignore  AOS.img  CMakeLists.txt  Makefile  README.md  bochsrc  kernel.map
include/: ansi.h  cstring.h  lib.h  limit.h  stddef.h  stdio.h  stdlib.h  terminal_io.h  unistd.h
include/ibm/: cmos.h  diskparm.h  partition.h
include/os/: common.h  config.h  constant.h  some_lib.h  struct_type.h  sys_call_num.h  sys_lib.h
include/sys/: time.h  types.h
src/boot/: README.md  boot.asm  boot.lst  loader.asm
src/boot/include/: fat12hdr.inc  load.inc  loader_16lib.asm  loader_16lib.inc  loader_32lib.asm  loader_32lib.inc  pm.inc
src/kernel/: README.md  asm_constant.inc  clock.c  console.c  const.h  dump.c  exception.c  global.h  i8259.c  idle.c  init_c.c  ipc.c  ipc_msg.c  kernel.asm  kernel.h  kernel_386lib.asm  kernel_i386lib.asm  keyboard.c  main.c  misc.c  panic.c  process.c  process.h  protect.c  protect.h  prototype.h  start.c  table.c  tty.c  type.h
src/kernel/clock/: clock.c
src/kernel/command/: Makefile  start.asm
src/kernel/command/cmd/: echo.c  pwd.c
src/kernel/fs/: fs.c  fs_misc.c  link.c  open.c  read_write.c
src/kernel/hd/: at_wini.c
src/kernel/idle/: idle.c
src/kernel/include/: README.md  ansi.h  assert.h  cmos.h  cstring.h  errno.h  keyboard.h  keymap.h  lib.h  limit.h  stdio.h  stdlib.h  times.h  types.h  unistd.h
src/kernel/include/core/: asm_constant.inc  cmos.h  config.h  console.h  constant.h  dev.h  elf.h  fat.h  fs.h  global.h  hd.h  kernel.h  kernel_i386lib.asm  keyboard.h  keymap.h  limit.h  message.h  mm.h  process.h  protect.h  prototype.h  stddef.h  struct_type.h  times.h  tty.h
src/kernel/include/ibm/: partition.h
src/kernel/init/: init.c
src/kernel/lib/ansi/: cstring.c  memcmp.c  string.asm
src/kernel/lib/i386/ipc/: ipc.asm
src/kernel/lib/stdio/: close.c  exec.c  exit.c  fork.c  kill.c  kprintf.c  open.c  printf.c  read.c  stat.c  unlink.c  vsprintf.c  wait.c  write.c
src/kernel/lib/stdlib/: alloc.c  change_console.c  clean_console.c  delay.asm  dump_pm.c  get_alive_proc.c  get_pid.c  get_ppid.c  get_time.c
src/kernel/mm/: README.md  alloc.c  exec.c  exit.c  fork.c  mem_map.c  mm.c  wait.c
src/kernel/origin/: README.md  hash.c  origin.c  origin.h
src/kernel/origin/cmd/: cat.c  check_proc.c  clear.c  date.c  echo.c  help.c  kill.c  proc.c  ps.c  pwd.c  rm.c  show_proc.c  top.c  touch.c  vi.c
src/kernel/test/: fs_test.c  tty_test.c
src/kernel/tty/: console.c  keyboard.c  tty.c
src/lib/ansi/: cstring.c  memcmp.c  string.asm
src/lib/stdio/: sprintf.c  vsprintf.c
test/: add.c  test  test.c
